Extend api/search to subsume api/fieldtext, api/fieldhtml
* Provide `format=csv` (or `format=html`) and `f=FIELD` parameters
  to get additional data in `papers` and `fields` response properties.
* Client JS uses `api/search`, not `api/fieldhtml`.
* Update hotcrapi to support `-f FIELD`.
* Hide fieldtext/fieldhtml API endpoints.
* Change return type from PaperList::text_csv.
